--- a/Term Sheet v.2
+++ b/Term Sheet v.2
@@ -94,5 +94,11 @@ Email:
       
 Signature Page to Indie.vc Agreement
 EXHIBIT A Conversion Percentage
-Conversion Percentage is equal to [percentage], provided however, if on or before the third anniversary of the date of this agreement (i.e. date +3 years) Investor has received aggregate Cash Flow Payments pursuant to Section 3 in an amount equal to three times the Purchase Amount, then as of such date the Conversion Percentage shall be equal to [50% of percentage].
+Conversion Percentage is equal to [percentage], provided however, if on or before the third anniversary of the date of this agreement (i.e. date +3 years) Investor has received aggregate Cash Flow Payments pursuant to Section 3 in an amount equal to:
+a) Three (3) times the Purchase Amount, then as of such date the Conversion Percentage shall be equal to [50% of percentage].
+or
+b) Two (2) times the Purchase Amount, then as of such date the Conversion Percentage shall be equal to [66.6% of percentage].
+or
+c) The Purchase Amount, then as of such date the Conversion Percentage shall be equal to [83.3% of percentage].
+
 
