Per v1 doc, added clarification that there is a limit on final payback (otherwise it could read that even if you pay back 3x prior to 36 months, you still have to keep profit sharing in perpetuity)

--- a/Term Sheet v.2
+++ b/Term Sheet v.2
@@ -36,6 +36,7 @@ with the Equity Financing.
 (b) Net income for purposes of calculating the Profit Sharing Payments shall be calculated in accordance with generally accepted accounting principles.
 (c) The Profit Sharing Payments will be made in addition to any Discretionary Cash Payments made pursuant to Section 3 above.
 (d) Notwithstanding the foregoing, the Company’s obligation to make Profit Sharing Payments pursuant to this Section 4 shall terminate if prior to the third anniversary of this Agreement, Investor has received aggregate Discretionary Cash Payments pursuant to Section 3 above equal to three times (3X) the Purchase Price.
+(e) In the aggregate, Discretionary Cash Payments and Profit Sharing Payments are not to exceed three times (3X) the Purchase Price.
 5. Participation Right
 (a) The Investor has the right of first refusal to purchase its Pro Rata Share (as defined below) of all (or any part) of any New Securities (as defined in Section 5(b) below) that the Company may from time to time issue after the date of this Agreement, provided, however, the Investor shall have no right to purchase any such New Securities if the Investor cannot demonstrate to the Company’s reasonable satisfaction that the Investor is at the time of the proposed issuance of such New Securities an “accredited investor” as such term is defined in Regulation D under the Securities Act. The Investor’s “Pro Rata Share” for purposes of this right of first refusal is the Conversion Percentage multiplied by the number of New Securities being issued by the Company.
 (b) “New Securities” shall mean any Capital Stock of the Company issued in connection with an Equity Financing.
