Re-worded to clarify what initial is modifying

--- a/Term Sheet v.2
+++ b/Term Sheet v.2
@@ -21,7 +21,7 @@ with the Equity Financing.
 “Liquidity Capitalization” means the number, as of immediately prior to the Liquidity Event, of shares of Capital Stock (on an as-converted basis) outstanding, assuming exercise or conversion of all outstanding vested and unvested options, warrants and other convertible securities.
  Event.
 “Liquidity Event” means a Change of Control or an Initial Public Offering. “Liquidity Price” means the price per share paid to stockholders in a Liquidity
-“Next Round Preferred Stock” means the shares of a series of Preferred Stock issued to the investors investing new money in the Company in connection with the initial closing of the Equity Financing.
+“Next Round Preferred Stock” means the shares of a series of Preferred Stock issued to the investors investing new money in the Company in connection with the closing of the initial Equity Financing.
 2. Conversion
 (a) If there is an Equity Financing before the expiration or termination of this instrument, the Company will automatically issue to the Investor a number of shares of Next Round Preferred Stock equal to the Investor Conversion Share Amount. In connection with the issuance of Next Round Preferred Stock by the Company to the Investor pursuant to this Section 2(a):
 (i) The Investor will execute and deliver to the Company all transaction documents related to the Equity Financing; and
